<resources>
    <string name="app_name">OBO Riders</string>
    <string name="title_home">Pick Up</string>
    <string name="title_dashboard">Drop Off</string>
    <string name="title_notifications">Notifications</string>

    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <array name="payments">
        <item>"CASH"</item>
        <item>"MPESA"</item>
    </array>

</resources>
